--- a/GPU-Clothing-Classifier.ipynb
+++ b/GPU-Clothing-Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "01d6f846-ce87-4766-ad13-8fa960a7a2ca",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "beb8bf33-2f3c-4320-853e-9e2e5c758c25",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "772ee598-a4aa-4a24-9f41-e8ed4bceceda",
    "metadata": {},
    "outputs": [],
@@ -56,18 +56,18 @@
     "            \n",
     "            nn.Conv2d(32, 64, kernel_size=3),\n",
     "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(2, 2),  \n",
-    "            \n",
     "            nn.Conv2d(64, 128, kernel_size=3),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(2, 2),\n",
     "\n",
-    "            nn.Conv2d(128, 128, kernel_size=3),\n",
+    "            nn.Conv2d(128, 256, kernel_size=3),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(256, 256, kernel_size=3),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(2, 2),\n",
     "                \n",
     "            nn.Flatten(),\n",
-    "            nn.Linear(2048, 1000),\n",
+    "            nn.Linear(16384, 1000),\n",
     "            nn.ReLU(),\n",
     "            nn.Linear(1000, 500),\n",
     "            nn.ReLU(),\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "1f8827ac-9301-4198-b71a-0628c6477056",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "fd8765c3-4a57-468f-a70e-86419eb8b2b0",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "cf2345ea-9158-4afb-9f2a-49726959bcb3",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "d2ebfddc-94f0-496d-9ab3-e4358007e72b",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "0cf787c6-9885-4745-8a94-651da67a6604",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "bedd49d2-a6fa-4c87-90f2-bc7f2332e38e",
    "metadata": {},
    "outputs": [
@@ -192,15 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2bab913b-e9b5-4a9a-8ace-8719e6e1e7dd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "ab0d8bae-72ea-41bd-8e69-2caefba53258",
    "metadata": {},
    "outputs": [],
@@ -211,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "id": "e2c7c13d-cd90-4b4a-90fe-26ed54b2893f",
    "metadata": {},
    "outputs": [
@@ -219,8 +211,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:     : 100%|█████████████████████████████████████████████████| 6/6 [00:01<00:00,  4.38it/s]\n",
-      "Validation:   : 100%|█████████████████████████████████████████████████| 2/2 [00:00<00:00,  7.77it/s]\n"
+      "Training:     : 100%|█████████████████████████████████████████████████| 6/6 [00:02<00:00,  2.90it/s]\n",
+      "Validation:   : 100%|█████████████████████████████████████████████████| 2/2 [00:00<00:00,  6.48it/s]\n"
      ]
     },
     {
@@ -228,19 +220,18 @@
      "output_type": "stream",
      "text": [
       "Epoch:               1 / 5\n",
-      "Avarage train loss:  0.070\n",
-      "Avarage valid loss:  0.110\n",
-      "Validation accuracy: 0.959\n",
-      "GPU memory allocated: 1.237\n",
-      "GPU memory occupied : 0.285\n"
+      "Avarage train loss:  0.366\n",
+      "Avarage valid loss:  0.395\n",
+      "Validation accuracy: 0.820\n",
+      "GPU memory allocated: 2.286, occupied : 0.355\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:     : 100%|█████████████████████████████████████████████████| 6/6 [00:01<00:00,  5.57it/s]\n",
-      "Validation:   : 100%|█████████████████████████████████████████████████| 2/2 [00:00<00:00,  8.57it/s]\n"
+      "Training:     : 100%|█████████████████████████████████████████████████| 6/6 [00:01<00:00,  3.07it/s]\n",
+      "Validation:   : 100%|█████████████████████████████████████████████████| 2/2 [00:00<00:00,  6.44it/s]\n"
      ]
     },
     {
@@ -248,19 +239,18 @@
      "output_type": "stream",
      "text": [
       "Epoch:               2 / 5\n",
-      "Avarage train loss:  0.064\n",
-      "Avarage valid loss:  0.167\n",
-      "Validation accuracy: 0.943\n",
-      "GPU memory allocated: 1.237\n",
-      "GPU memory occupied : 0.285\n"
+      "Avarage train loss:  0.331\n",
+      "Avarage valid loss:  0.299\n",
+      "Validation accuracy: 0.844\n",
+      "GPU memory allocated: 2.286, occupied : 0.355\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:     : 100%|█████████████████████████████████████████████████| 6/6 [00:01<00:00,  5.51it/s]\n",
-      "Validation:   : 100%|█████████████████████████████████████████████████| 2/2 [00:00<00:00,  8.80it/s]\n"
+      "Training:     : 100%|█████████████████████████████████████████████████| 6/6 [00:01<00:00,  3.00it/s]\n",
+      "Validation:   : 100%|█████████████████████████████████████████████████| 2/2 [00:00<00:00,  6.51it/s]\n"
      ]
     },
     {
@@ -268,19 +258,18 @@
      "output_type": "stream",
      "text": [
       "Epoch:               3 / 5\n",
-      "Avarage train loss:  0.096\n",
-      "Avarage valid loss:  0.095\n",
-      "Validation accuracy: 0.967\n",
-      "GPU memory allocated: 1.237\n",
-      "GPU memory occupied : 0.285\n"
+      "Avarage train loss:  0.234\n",
+      "Avarage valid loss:  0.286\n",
+      "Validation accuracy: 0.893\n",
+      "GPU memory allocated: 2.286, occupied : 0.355\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:     : 100%|█████████████████████████████████████████████████| 6/6 [00:01<00:00,  5.48it/s]\n",
-      "Validation:   : 100%|█████████████████████████████████████████████████| 2/2 [00:00<00:00,  8.57it/s]\n"
+      "Training:     : 100%|█████████████████████████████████████████████████| 6/6 [00:02<00:00,  2.99it/s]\n",
+      "Validation:   : 100%|█████████████████████████████████████████████████| 2/2 [00:00<00:00,  6.32it/s]\n"
      ]
     },
     {
@@ -288,19 +277,18 @@
      "output_type": "stream",
      "text": [
       "Epoch:               4 / 5\n",
-      "Avarage train loss:  0.075\n",
-      "Avarage valid loss:  0.110\n",
-      "Validation accuracy: 0.975\n",
-      "GPU memory allocated: 1.237\n",
-      "GPU memory occupied : 0.285\n"
+      "Avarage train loss:  0.177\n",
+      "Avarage valid loss:  0.254\n",
+      "Validation accuracy: 0.910\n",
+      "GPU memory allocated: 2.154, occupied : 0.355\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:     : 100%|█████████████████████████████████████████████████| 6/6 [00:01<00:00,  5.51it/s]\n",
-      "Validation:   : 100%|█████████████████████████████████████████████████| 2/2 [00:00<00:00,  8.45it/s]"
+      "Training:     : 100%|█████████████████████████████████████████████████| 6/6 [00:01<00:00,  3.00it/s]\n",
+      "Validation:   : 100%|█████████████████████████████████████████████████| 2/2 [00:00<00:00,  6.42it/s]"
      ]
     },
     {
@@ -308,11 +296,10 @@
      "output_type": "stream",
      "text": [
       "Epoch:               5 / 5\n",
-      "Avarage train loss:  0.088\n",
-      "Avarage valid loss:  0.071\n",
-      "Validation accuracy: 0.984\n",
-      "GPU memory allocated: 1.237\n",
-      "GPU memory occupied : 0.285\n"
+      "Avarage train loss:  0.162\n",
+      "Avarage valid loss:  0.160\n",
+      "Validation accuracy: 0.943\n",
+      "GPU memory allocated: 2.353, occupied : 0.355\n"
      ]
     },
     {
@@ -373,13 +360,12 @@
     "          f'Avarage valid loss:  {(valid_running_loss / len(valid_loader.dataset)):.3f}\\n'\n",
     "          f'Validation accuracy: {(accuracy_score(valid_targets, valid_predict)):.3f}')\n",
     "\n",
-    "    print(f'GPU memory allocated: {(torch._C._mps_driverAllocatedMemory() / 1073741824):.3f}')\n",
-    "    print(f'GPU memory occupied : {(torch._C._mps_currentAllocatedMemory() / 1073741824):.3f}')"
+    "    print(f'GPU memory allocated: {(torch._C._mps_driverAllocatedMemory() / 1073741824):.3f}, occupied : {(torch._C._mps_currentAllocatedMemory() / 1073741824):.3f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "id": "9104a116-6936-4bad-bcb5-3a1c5d0bccd6",
    "metadata": {},
    "outputs": [
@@ -387,14 +373,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Testing: : 100%|████████████████████████████████████████████████████| 10/10 [00:01<00:00,  8.36it/s]"
+      "Testing: : 100%|████████████████████████████████████████████████████| 10/10 [00:01<00:00,  6.51it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 97.71%\n"
+      "Test Accuracy: 96.08%\n"
      ]
     },
     {
@@ -426,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "1d4dae4f-4e3c-4ecf-8f95-fd17dc5348e4",
    "metadata": {},
    "outputs": [],
@@ -436,24 +422,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "id": "aa46a023-1568-47f5-8cfb-391e2453c7ec",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m persent \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m\n\u001b[0;32m----> 2\u001b[0m model\u001b[38;5;241m.\u001b[39mload_state_dict(torch\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;28mstr\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclothing classifier \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m persent \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m persent.pth\u001b[39m\u001b[38;5;124m'\u001b[39m)))\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
     }
    ],
    "source": [
-    "persent = 100\n",
-    "model.load_state_dict(torch.load(str('clothing classifier ' + persent + ' persent.pth')))"
+    "persent = 96.08\n",
+    "model.load_state_dict(torch.load(str('clothing classifier ' + str(persent + ' persent.pth')))"
    ]
   },
   {
