--- a/Augmentation.ipynb
+++ b/Augmentation.ipynb
@@ -2,32 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "a3af9604-8daa-4602-99c5-08e4e746529a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'CIFAR10' from 'torchvision.transforms.autoaugment' (/opt/anaconda3/lib/python3.11/site-packages/torchvision/transforms/autoaugment.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[59], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchvision\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m transforms, datasets\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mPIL\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchvision\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtransforms\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mautoaugment\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CIFAR10\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'CIFAR10' from 'torchvision.transforms.autoaugment' (/opt/anaconda3/lib/python3.11/site-packages/torchvision/transforms/autoaugment.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from torch.utils.data import DataLoader, random_split\n",
-    "from torchvision import transforms, datasets\n",
-    "import PIL\n",
-    "from torchvision.transforms.autoaugment import CIFAR10"
+    "import os\n",
+    "from tqdm import tqdm\n",
+    "import numpy as np\n",
+    "from imgaug import augmenters as iaa\n",
+    "from PIL import Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "74a2907c-88b7-420a-8231-4ad0b45ce8fd",
    "metadata": {},
    "outputs": [],
@@ -37,88 +26,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "03e511a9-0441-496b-acce-6d12f9cd40c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def verify_image(fp):\n",
-    "    try:\n",
-    "        PIL.Image.open(fp).verify()\n",
-    "        return True\n",
-    "    except:\n",
-    "        return False"
+    "def augment_images_in_folder(folder_path):\n",
+    "    # Создаем объект аугментации\n",
+    "    seq = iaa.Sequential([\n",
+    "        iaa.Fliplr(0.7),\n",
+    "        iaa.Flipud(0.7),\n",
+    "        iaa.Affine(rotate=(-180, 180)),\n",
+    "        iaa.GaussianBlur(sigma=(0, 1.0)),\n",
+    "        iaa.AdditiveGaussianNoise(scale=(0, 0.1 * 255))\n",
+    "    ])\n",
+    "\n",
+    "    image_files = os.listdir(folder_path)\n",
+    "\n",
+    "    bar = tqdm(enumerate(image_files), total=len(image_files), ncols=100)\n",
+    "    bar.set_description(f\"Augmentation: \")\n",
+    "                    \n",
+    "    for i, file_name in bar:\n",
+    "        if not file_name.startswith('.'):\n",
+    "            image_path = os.path.join(folder_path, file_name)\n",
+    "            try:\n",
+    "                image = Image.open(image_path)\n",
+    "\n",
+    "                if image.mode == 'RGBA':\n",
+    "                    image = image.convert('RGB')\n",
+    "\n",
+    "                image_array = np.array(image)\n",
+    "                images_aug = [seq.augment_image(image_array) for _ in range(50)]\n",
+    "                    \n",
+    "                for i, image_aug in enumerate(images_aug):\n",
+    "                    class_name = os.path.basename(folder_path)\n",
+    "                    new_folder = os.path.join(PATH, f\"{class_name}_aug\")\n",
+    "                    os.makedirs(new_folder, exist_ok=True)\n",
+    "                    new_file_name = f\"{os.path.splitext(file_name)[0]}_aug_{i}.jpg\"\n",
+    "                    Image.fromarray(image_aug).save(os.path.join(new_folder, new_file_name))\n",
+    "            except Exception as e:\n",
+    "                print(f\"Ошибка при обработке изображения {file_name}: {e}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "cee0a257-bcf7-47dd-89b2-7d3a3a769f83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = transforms.Compose([\n",
-    "    transforms.Resize(size=100),\n",
-    "    transforms.RandomRotation(degrees=180),\n",
-    "    transforms.AutoAugment(),\n",
-    "    transforms.ToTensor()\n",
-    "    ImageNetPolicy(),\n",
-    "])"
+    "class_folders = [f.path for f in os.scandir(PATH) if f.is_dir()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "id": "1dde2b15-70f5-48c3-b987-88543356a93f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "612\n"
+      "Augmentation: : 100%|█████████████████████████████████████████████| 305/305 [00:50<00:00,  6.02it/s]\n",
+      "Augmentation: : 100%|█████████████████████████████████████████████| 308/308 [00:52<00:00,  5.81it/s]\n"
      ]
     }
    ],
    "source": [
-    "dataset = datasets.ImageFolder(root=PATH, is_valid_file=verify_image)\n",
-    "print(len(dataset))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "546f80a2-b605-45f4-aee9-29b75401ecb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aa_transform = transforms.AutoAugment()\n",
-    "aa_transform.subpolicies = transform\n",
-    "dataset = transforms.Compose([\n",
-    "                                        aa_transform,\n",
-    "                                        transforms.ToTensor()\n",
-    "                                    ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "83321564-d79d-499b-8320-b1abd4b184ef",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Compose(\n",
-      "    AutoAugment(policy=AutoAugmentPolicy.IMAGENET, fill=None)\n",
-      "    ToTensor()\n",
-      ")\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dataset)"
+    "for folder in class_folders:\n",
+    "    augment_images_in_folder(folder)"
    ]
   },
   {
