--- a/GPU-Clothing-Classifier.ipynb
+++ b/GPU-Clothing-Classifier.ipynb
@@ -33,8 +33,7 @@
     "BATCH_SIZE = 64\n",
     "LEARNING_RATE = 0.001\n",
     "\n",
-    "PATH_TRAIN = 'dataset'\n",
-    "PATH_TESTS = 'Tests_data'"
+    "PATH = 'New_dataset'"
    ]
   },
   {
@@ -129,7 +128,7 @@
    ],
    "source": [
     "device = \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
-    "print(f'CNN training on {device}')\n"
+    "print(f'CNN training on {device}')"
    ]
   },
   {
@@ -168,20 +167,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train data length: 368\n",
-      "Valid data length: 122\n",
-      "Tests data length: 122\n"
+      "Train data length: 16708\n",
+      "Valid data length: 7160\n",
+      "Tests data length: 6732\n"
      ]
     }
    ],
    "source": [
-    "dataset = datasets.ImageFolder(root=PATH_TRAIN, transform=transform, is_valid_file=verify_image)\n",
-    "data = DataLoader(dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "dataset = datasets.ImageFolder(root=PATH, transform=transform, is_valid_file=verify_image)\n",
     "\n",
-    "dataset, tests_dataset = random_split_ratio(dataset, random_state=42, test_size=.2)\n",
+    "dataset, tests_dataset = random_split_ratio(dataset, random_state=42, test_size=.22)\n",
     "tests_loader = DataLoader(tests_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "\n",
-    "train_dataset, valid_dataset = random_split_ratio(dataset, random_state=42, test_size=.25)\n",
+    "train_dataset, valid_dataset = random_split_ratio(dataset, random_state=42, test_size=.3)\n",
     "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "valid_loader = DataLoader(valid_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
     "\n",
@@ -203,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "e2c7c13d-cd90-4b4a-90fe-26ed54b2893f",
    "metadata": {},
    "outputs": [
@@ -211,95 +209,90 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:     : 100%|█████████████████████████████████████████████████| 6/6 [00:02<00:00,  2.90it/s]\n",
-      "Validation:   : 100%|█████████████████████████████████████████████████| 2/2 [00:00<00:00,  6.48it/s]\n"
+      "Training    : 100%|███████████████████████████████████████████████| 262/262 [01:43<00:00,  2.52it/s]\n",
+      "Validation  : 100%|███████████████████████████████████████████████| 112/112 [00:20<00:00,  5.44it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:               1 / 5\n",
-      "Avarage train loss:  0.366\n",
-      "Avarage valid loss:  0.395\n",
-      "Validation accuracy: 0.820\n",
-      "GPU memory allocated: 2.286, occupied : 0.355\n"
+      "Epoch:                1 / 5\n",
+      "Avarage train loss:  0.293\n",
+      "Avarage valid loss:  0.123\n",
+      "Validation accuracy: 0.960\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:     : 100%|█████████████████████████████████████████████████| 6/6 [00:01<00:00,  3.07it/s]\n",
-      "Validation:   : 100%|█████████████████████████████████████████████████| 2/2 [00:00<00:00,  6.44it/s]\n"
+      "Training    : 100%|███████████████████████████████████████████████| 262/262 [01:38<00:00,  2.67it/s]\n",
+      "Validation  : 100%|███████████████████████████████████████████████| 112/112 [00:20<00:00,  5.58it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:               2 / 5\n",
-      "Avarage train loss:  0.331\n",
-      "Avarage valid loss:  0.299\n",
-      "Validation accuracy: 0.844\n",
-      "GPU memory allocated: 2.286, occupied : 0.355\n"
+      "Epoch:                2 / 5\n",
+      "Avarage train loss:  0.102\n",
+      "Avarage valid loss:  0.077\n",
+      "Validation accuracy: 0.976\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:     : 100%|█████████████████████████████████████████████████| 6/6 [00:01<00:00,  3.00it/s]\n",
-      "Validation:   : 100%|█████████████████████████████████████████████████| 2/2 [00:00<00:00,  6.51it/s]\n"
+      "Training    : 100%|███████████████████████████████████████████████| 262/262 [01:38<00:00,  2.67it/s]\n",
+      "Validation  : 100%|███████████████████████████████████████████████| 112/112 [00:19<00:00,  5.62it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:               3 / 5\n",
-      "Avarage train loss:  0.234\n",
-      "Avarage valid loss:  0.286\n",
-      "Validation accuracy: 0.893\n",
-      "GPU memory allocated: 2.286, occupied : 0.355\n"
+      "Epoch:                3 / 5\n",
+      "Avarage train loss:  0.074\n",
+      "Avarage valid loss:  0.051\n",
+      "Validation accuracy: 0.983\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:     : 100%|█████████████████████████████████████████████████| 6/6 [00:02<00:00,  2.99it/s]\n",
-      "Validation:   : 100%|█████████████████████████████████████████████████| 2/2 [00:00<00:00,  6.32it/s]\n"
+      "Training    : 100%|███████████████████████████████████████████████| 262/262 [01:38<00:00,  2.67it/s]\n",
+      "Validation  : 100%|███████████████████████████████████████████████| 112/112 [00:19<00:00,  5.64it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:               4 / 5\n",
-      "Avarage train loss:  0.177\n",
-      "Avarage valid loss:  0.254\n",
-      "Validation accuracy: 0.910\n",
-      "GPU memory allocated: 2.154, occupied : 0.355\n"
+      "Epoch:                4 / 5\n",
+      "Avarage train loss:  0.036\n",
+      "Avarage valid loss:  0.020\n",
+      "Validation accuracy: 0.993\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training:     : 100%|█████████████████████████████████████████████████| 6/6 [00:01<00:00,  3.00it/s]\n",
-      "Validation:   : 100%|█████████████████████████████████████████████████| 2/2 [00:00<00:00,  6.42it/s]"
+      "Training    : 100%|███████████████████████████████████████████████| 262/262 [01:38<00:00,  2.67it/s]\n",
+      "Validation  : 100%|███████████████████████████████████████████████| 112/112 [00:19<00:00,  5.62it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:               5 / 5\n",
-      "Avarage train loss:  0.162\n",
-      "Avarage valid loss:  0.160\n",
-      "Validation accuracy: 0.943\n",
-      "GPU memory allocated: 2.353, occupied : 0.355\n"
+      "Epoch:                5 / 5\n",
+      "Avarage train loss:  0.027\n",
+      "Avarage valid loss:  0.026\n",
+      "Validation accuracy: 0.990\n"
      ]
     },
     {
@@ -319,7 +312,7 @@
     "    train_running_loss = 0\n",
     "    valid_running_loss = 0\n",
     "    bar = tqdm(train_loader, total=len(train_loader), ncols=100)\n",
-    "    bar.set_description(f\"Training:     \")\n",
+    "    bar.set_description(f\"Training    \")\n",
     "    \n",
     "    for x_batch, y_batch in bar:\n",
     "        x_batch, y_batch = x_batch.to(device), y_batch.to(device)\n",
@@ -331,16 +324,14 @@
     "\n",
     "        train_running_loss += (loss.item() * x_batch.size(0))\n",
     "\n",
-    "    with torch.no_grad():\n",
-    "\n",
-    "        \n",
+    "    with torch.no_grad():  \n",
     "        model.eval()\n",
     "\n",
     "        valid_predict = []  \n",
     "        valid_targets = []  \n",
     "        \n",
     "        vbar = tqdm(valid_loader, total=len(valid_loader), ncols=100)\n",
-    "        vbar.set_description(f\"Validation:   \")\n",
+    "        vbar.set_description(f\"Validation  \")\n",
     "        vbar.reset()\n",
     "        \n",
     "        for x_batch, y_batch in vbar:\n",
@@ -355,17 +346,15 @@
     "\n",
     "        model.train()\n",
     "\n",
-    "    print(f'Epoch:               {epoch + 1} / {EPOCHES}\\n'\n",
+    "    print(f'Epoch:               {(epoch + 1):2d} / {EPOCHES}\\n'\n",
     "          f'Avarage train loss:  {(train_running_loss / len(train_loader.dataset)):.3f}\\n'\n",
     "          f'Avarage valid loss:  {(valid_running_loss / len(valid_loader.dataset)):.3f}\\n'\n",
-    "          f'Validation accuracy: {(accuracy_score(valid_targets, valid_predict)):.3f}')\n",
-    "\n",
-    "    print(f'GPU memory allocated: {(torch._C._mps_driverAllocatedMemory() / 1073741824):.3f}, occupied : {(torch._C._mps_currentAllocatedMemory() / 1073741824):.3f}')"
+    "          f'Validation accuracy: {(accuracy_score(valid_targets, valid_predict)):.3f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "9104a116-6936-4bad-bcb5-3a1c5d0bccd6",
    "metadata": {},
    "outputs": [
@@ -373,14 +362,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Testing: : 100%|████████████████████████████████████████████████████| 10/10 [00:01<00:00,  6.51it/s]"
+      "Testing     : 100%|███████████████████████████████████████████████| 106/106 [00:19<00:00,  5.41it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 96.08%\n"
+      "Test Accuracy: 99.15%\n"
      ]
     },
     {
@@ -397,8 +386,8 @@
     "test_predict = []  \n",
     "test_targets = []  \n",
     "\n",
-    "bar = tqdm(enumerate(data), total=len(data), ncols=100)\n",
-    "bar.set_description(f\"Testing: \")\n",
+    "bar = tqdm(enumerate(tests_loader), total=len(tests_loader), ncols=100)\n",
+    "bar.set_description(f\"Testing     \")\n",
     "\n",
     "for idx_batch, (x_batch, y_batch) in bar:\n",
     "    x_batch, y_batch = x_batch.to(device), y_batch.to(device)\n",
@@ -412,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "1d4dae4f-4e3c-4ecf-8f95-fd17dc5348e4",
    "metadata": {},
    "outputs": [],
@@ -422,25 +411,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "aa46a023-1568-47f5-8cfb-391e2453c7ec",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"int\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m persent \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m\n\u001b[0;32m----> 2\u001b[0m model\u001b[38;5;241m.\u001b[39mload_state_dict(torch\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;28mstr\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclothing classifier \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m persent \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m persent.pth\u001b[39m\u001b[38;5;124m'\u001b[39m)))\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
-     ]
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "persent = 96.08\n",
-    "model.load_state_dict(torch.load(str('clothing classifier ' + str(persent + ' persent.pth')))"
+    "persent = round(accuracy * 100, 2)\n",
+    "model.load_state_dict(torch.load(str('clothing classifier ' + str(persent) + ' persent.pth')))"
    ]
   },
   {
