--- a/GPU-Clothing-Classifier.ipynb
+++ b/GPU-Clothing-Classifier.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "9104a116-6936-4bad-bcb5-3a1c5d0bccd6",
    "metadata": {},
    "outputs": [
@@ -362,14 +362,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Testing     : 100%|███████████████████████████████████████████████| 106/106 [00:19<00:00,  5.41it/s]"
+      "Testing     : 100%|███████████████████████████████████████████████| 106/106 [00:18<00:00,  5.61it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 99.15%\n"
+      "Test Accuracy: 99.51%\n"
      ]
     },
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "aa46a023-1568-47f5-8cfb-391e2453c7ec",
    "metadata": {},
    "outputs": [
@@ -421,13 +421,13 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "persent = round(accuracy * 100, 2)\n",
+    "persent = 99.53\n",
     "model.load_state_dict(torch.load(str('clothing classifier ' + str(persent) + ' persent.pth')))"
    ]
   },
