--- a/GPU-Clothing-Classifier.ipynb
+++ b/GPU-Clothing-Classifier.ipynb
@@ -196,7 +196,8 @@
    "outputs": [],
    "source": [
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
+    "opt = optimizer"
    ]
   },
   {
