--- a/GPU-Clothing-Classifier.ipynb
+++ b/GPU-Clothing-Classifier.ipynb
@@ -196,8 +196,7 @@
    "outputs": [],
    "source": [
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
-    "opt = optimizer"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)"
    ]
   },
   {
